add photo to test7

--- a/test7.html
+++ b/test7.html
@@ -62,7 +62,7 @@
                 <div class="section-top-img">
 
 
-                 <img src="section1.jpg" alt="" width="250" height="250">
+                 <img src="photo_2025-05-20_15-18-11.jpg" alt="" width="200" height="270">
                  <img src="section2.jpg" alt="" width="250" height="250">
                  <img src="section3.jpg" alt="" width="250" height="250">
                  <img src="sevtion4.jpg" alt="" width="250" height="250">
@@ -79,7 +79,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section1.jpg">
+                <img src="mobile1.jpg">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -95,7 +95,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section2.jpg">
+                <img src="labtop2.jpg">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -111,7 +111,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section3.jpg">
+                <img src="airpad2.jpg">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -127,7 +127,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="sevtion4.jpg">
+                <img src="watch2.jpg">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -147,8 +147,8 @@
                     <div class="section-all-buttom">
 
                         <div class="section-all-buttom-img">
-                            <img src="section1.jpg" alt="" width="250" height="250">
-                            <img src="section2.jpg" alt=""  width="250" height="250">
+                            <img src="section5.jpg" alt="" width="250" height="400">
+                            <img src="section6.jpg" alt=""  width="250" height="400">
                         </div>
 
 
@@ -168,7 +168,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section1.jpg" width="250" height="250">
+                <img src="s 1.jpg" width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -184,7 +184,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section2.jpg" width="250" height="250">
+                <img src="s 5.jpg" width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -200,7 +200,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section3.jpg"width="250" height="250">
+                <img src="s 3.jpg"width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -216,7 +216,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="sevtion4.jpg" width="250" height="250">
+                <img src="s 6.jpg" width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
