--- a/test7.html
+++ b/test7.html
@@ -360,7 +360,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section1.jpg" width="250" height="250">
+                <img src="airpad3.jpg" width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -376,7 +376,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section2.jpg" width="250" height="250">
+                <img src="airpad10.jpg" width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -392,7 +392,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section3.jpg"width="250" height="250">
+                <img src="airpad11.jpg"width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -408,11 +408,11 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="sevtion4.jpg" width="250" height="250">
+                <img src="airpad9.jpg" width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
-                    QCY
+                    هندزفریQCY
                 </h5>
                
              </div>
@@ -543,7 +543,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section1.jpg" width="250" height="250">
+                <img src="watch4.jpg" width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -559,7 +559,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section2.jpg" width="250" height="250">
+                <img src="watch6.jpg" width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -575,7 +575,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="section3.jpg"width="250" height="250">
+                <img src="watch7.jpg"width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
@@ -591,7 +591,7 @@
         <a href="#">
             <div class="item-grid-product">
              <div class="img-product">
-                <img src="sevtion4.jpg" width="250" height="250">
+                <img src="watch9.jpg" width="250" height="250">
              </div>
              <div class="caption-item-product">
                 <h5 class="title-product">
