--- a/test7.html
+++ b/test7.html
@@ -245,17 +245,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="m1.jpg" alt="" width="200" height="200" >
+                                     <img src="s25-2.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                         S25 Ultra
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          گوشی موبایل سامسونگ مدل گلکسی S25 Ultra<br> ظرفیت 256 گیگابایت رم 12 گیگابایت - ویتنام
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          102,490,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -269,17 +269,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="16pro-3.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                          16Pro Max
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          گوشی موبایل اپل مدل Iphone 16 Pro Max<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                         142,300,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -293,17 +293,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="xiaomi 15pr-4.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                         Xiaomi 15 pro 
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                      گوشی موبایل شیائومی مدل Xiaomi 15 pro  <br> ظرفیت 256 گیگابایت رم 12 گیگابایت - ویتنام
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          72,000,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -317,17 +317,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="nokia-4.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                         Nokia Magic Max 5G 
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          گوشی موبایل شیائومی مدل   Nokia Magic Max 5G <br> ظرفیت 256 گیگابایت رم 12 گیگابایت - <br>    ویتنام 
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          22,453,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -437,17 +437,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="airpadpro-2.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                        Apple Airpods 4
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          ایرپاد 4 اپل با قابلیت active noise cancellation<br> Airpods 4 with Active Noise Cancellation
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          13,500,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -461,17 +461,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="buds3pro-1.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                         Galaxy Buds 3 pro
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          هندزفری بلوتوثی سامسونگ مدل Galaxy Buds 3 pro<br> Samsung Galaxy Buds 3 pro Bluetooth Earbuds
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          8,619,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -485,17 +485,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="flipbudspro-1.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                         Flip Buds pro TWSEJ20GT
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          هندزفری شیائومی مدل  Flip Buds pro TWSEJ20GT<br> Xiaomi  Flip Buds pro TWSEJ20GT Bluetooth
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          9,899,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -509,17 +509,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="t13anc2-1.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                         T13 ANC 2
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          هندزفری بلوتوثی کیو سی وای مدل T13 ANC 2<br> QCY T13 ANC 2 Bluetooth Earphons
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          1,289,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -620,17 +620,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="watch644mm-3.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                        Galaxy Watch6 44mm
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          ساعت هوشمند سامسونگ مدل Galaxy Watch6 44mm<br>  Samsung Galaxy Watch6 44mm Smart Watch
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          12,290,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -648,10 +648,10 @@
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                         Ultra 49mm loop 
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          ساعت هوشمند اپل مدل Ultra 49mm loop <br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
                                             </p>
                                         <div class="price-cart">
                                           400000تومان
