--- a/test7.html
+++ b/test7.html
@@ -620,7 +620,7 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="watch644mm-3.jpg" alt="" width="250" height="250" >
+                                     <img src="watch644mm-4.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
@@ -644,17 +644,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="watch49mmloop-1.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
                                          Ultra 49mm loop 
                                         </h5>
                                          <p class="text-cart">
-                                          ساعت هوشمند اپل مدل Ultra 49mm loop <br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          ساعت هوشمند اپل مدل Ultra 49mm loop <br> Iphone Watch  Ultra 49mm Alpine loop 
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          49,900,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -668,17 +668,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="solarpro-2.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                         Solar Pro
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          ساعت هوشمند هایلو  مدل Solar Pro Alpine<br> Haylou Solar Pro Alpine Smart Watch 
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                         4,390,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -692,17 +692,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="gspro-1.jpg" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                        GS Pro
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          ساعت هوشمند میبرو مدل GS Pro Alpine<br> Mibro Watch GS Pro Alpine Smart Watch
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          6,500,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -823,7 +823,7 @@
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                        MacBook Air MW123 M4 
                                         </h5>
                                          <p class="text-cart">
                                           گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
