--- a/test7.html
+++ b/test7.html
@@ -819,17 +819,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="macbook-1.webp" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
                                         MacBook Air MW123 M4 
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          لبتاپ اپل 13.6 اینچی مدل MacBook Air MW123 M4 <br>  MacBook Air MW123 M4 2025 16GB RAM 256GB SSD
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          80,5000,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -843,17 +843,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="surfacestudio-2.webp" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                         Surface Studio-i7
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          لبتاپ 14.4 اینچی مایکروسافت  Surface Studio-(i7-32GB-1TB)<br> Microsoft Surface Laptop Studio(i7-32GB-1TB)
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          88,700,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -867,17 +867,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="lenovo-1.webp" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                         Legion Pro 5 2024 
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                          لبتاپ لنوو Legion Pro 5 2024-BB 14650HX i7 64GB 1TB SSD<br> Lenovo Legion Pro 5 2024-BB 14650HX i7 64GB 1TB SSD
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                          63,319,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
@@ -891,17 +891,17 @@
                              <a href="#">
                                  <div class="item-grid-cart">
                                   <div class="img-cart">
-                                     <img src="section1.jpg" alt="" width="250" height="250" >
+                                     <img src="asus-1.webp" alt="" width="250" height="250" >
                                    </div>
                                    <div class="caption-item-cart">
                                     <h5 class="title-cart">
-                                         S23 FE 
+                                        ROG Strix G18 G814JI 
                                         </h5>
                                          <p class="text-cart">
-                                          گوشی موبایل سامسونگ مدل گلکسی S23 FE<br> ظرفیت 256 گیگابایت رم 8 گیگابایت - ویتنام
+                                        لبتاپ ایسوس ROG Strix G18 G814JI-C 13650HX i7 16GB 2TB SSD<br>ASUS ROG Strix G18 G814JI-C 13650HX i7 16GB 2TB SSD
                                             </p>
                                         <div class="price-cart">
-                                          400000تومان
+                                         76,129,000تومان
                                             </div>
                                             <button class="add-too-cart"> اضافه کردن به سبد خرید</button>
                                       </div>
